common/prometheous-grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - grafana.bunnana.dev
    secretName: grafana-cert-tls
  rules:
  - host: grafana.bunnana.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheous-grafana
            port:
              number: 80
